update to latest sqlite v3.14.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
-pCompileSdkVersion=23
-pBuildToolsVersion=24.0.0
-pMinSdkVersion=16
-pTargetSdkVersion=23
+pCompileSdkVersion=24
+pBuildToolsVersion=24.0.1
+pMinSdkVersion=14
+pTargetSdkVersion=24
+pVersionName=3.14.1-r1
+pJcenterGroup=sqlite4a
+pJcenterArtifact=sqlite4a
+pGitHubUrl=https://github.com/DanielSerdyukov/sqlite4a
