--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha5'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+        classpath 'com.android.tools.build:gradle:2.2.0-beta2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.1'
     }
 }
 
@@ -14,33 +14,6 @@ allprojects {
     }
 }
 
-ext {
-    versionName = "3.13.0-${revision}"
-    versionCode = calculateVersionCode()
-}
-
-def getRevision() {
-    def tag = 'git describe --tags'.execute().text.trim()
-    if (tag =~ /^v.*$/) {
-        return tag.substring(1)
-    }
-    return 'SNAPSHOT'
-}
-
-int calculateVersionCode() {
-    def versionCode = 0
-    (versionName =~ /(\d+)/).collect {
-        Integer.parseInt(it[0] as String)
-    }.eachWithIndex { num, index ->
-        if (index < 3) {
-            versionCode += (num * (100000 / Math.pow(100, index)))
-        } else {
-            versionCode += num
-        }
-    }
-    return Math.max(1, versionCode)
-}
-
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
+    gradleVersion = '2.14'
 }
