--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,6 @@ debug:
 
 bintray:
   script:
-    - ./gradlew clean assembleRelease publishMavenAndroidPublicationToMavenLocal bintrayUpload
+    - ./gradlew clean assembleRelease publishToMavenLocal bintrayUpload
   only:
     - /^v.*$/
