--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0-rc1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -11,6 +12,8 @@ allprojects {
     repositories {
         jcenter()
     }
+    group 'alchemy'
+    version '3.17.0'
 }
 
 task clean(type: Delete) {
