--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-rc1'
+        classpath 'com.android.tools.build:gradle:2.3.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
@@ -12,8 +12,8 @@ allprojects {
     repositories {
         jcenter()
     }
-    group 'alchemy'
-    version '3.17.0'
+    group 'sqlite4a'
+    version '3.18.0'
 }
 
 task clean(type: Delete) {
